!01-victoriametrics/02-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: public
    certmanager.k8s.io/cluster-issuer: monitoring-issuer
spec:
  tls:
    - hosts:
        - mon.local
      secretName: mon-tls
  rules:
    - host: "mon.local"
      http:
        paths:
          - pathType: Prefix
            path: /grafana
            backend:
              service:
                name: grafana-sys-connect
                port:
                  number: 3000
          - pathType: Prefix
            path: /vm
            backend:
              service:
                name: victoriametrics-sys-connect
                port:
                  number: 8428
